--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
+  "scripts": {
+    "cy:open": "cypress open"
+  },
   "devDependencies": {
-    "cypress": "^13.9.0"
+    "@types/node": "^14.18.21",
+    "cypress": "^13.10.0",
+    "typescript": "^5.4.5"
   }
 }
